LRDOCS-9924 wordsmithing